# hello-cmake

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
benchmark/: benchmark.cpp  hello_benchmark.cpp  vm_benchmark.cpp
scripts/: format-project.sh  run-cppcheck.sh
src/: main.cpp
src/compiler/: compiler.cpp  compiler.hpp
src/helloword/: helloword.cpp  helloword.hpp
src/helloword2/: helloword.cpp  helloword.hpp
src/parcer/: parser.cpp  parser.hpp
src/tockenizer/: tokenizer.cpp  tokenizer.hpp
src/utils/: dev_null.hpp
src/vm/: simple_vm.cpp  simple_vm.hpp
test/: chain_test.cpp  compiler_test.cpp  parser_test.cpp  test1.cpp  tokenizer_test.cpp  vm_test.cpp
